# vanity-mantra

./: .gitignore  BLOG.md  CHANGELOG.md  CLOUDFLARE-DEPLOY.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB-PAGES-DEPLOY.md  LICENSE  README.md  SECURITY.md  _headers  _redirects  benchmark.sh  build.sh  cloudflare-build.sh  index.html  main.js  package.json  test-integration.html  test-performance.html  test-system.sh  test_suggestions.js  validate-integration-tests.sh  vanity_wasm.d.ts  vanity_wasm.js  vanity_wasm_bg.wasm  vanity_wasm_bg.wasm.d.ts  verify-deployment.sh  worker.js
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  pages.yml
wasm-module/: Cargo.toml
wasm-module/src/: lib.rs
